--- a/.github/workflows/zombienet_parachain-template.yml
+++ b/.github/workflows/zombienet_parachain-template.yml
@@ -7,6 +7,10 @@ on:
         type: string
         description: "Build run ID from the build workflow."
         required: true
+      ref_slug:
+        type: string
+        description: "Source ref slug from the build workflow."
+        required: false
       test_pattern:
         type: string
         description: "Run tests which names match this pattern (also flaky)"
@@ -19,11 +23,6 @@ on:
         description: "Run tests which names match this pattern (also flaky)"
         default: ""
         required: false
-  push:
-   branches:
-     - master
-  pull_request:
-    types: [opened, synchronize, reopened, ready_for_review]
   merge_group:
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -48,6 +47,7 @@ jobs:
       tests_yaml: .github/zombienet-tests/zombienet_parachain-template_tests.yml
       test_pattern: ${{ inputs.test_pattern }}
       build_run_id: ${{ inputs.build_run_id }}
+      ref_slug: ${{ inputs.ref_slug }}
 
 
   zombienet-parachain-template-tests:
