--- a/cumulus/parachains/runtimes/assets/asset-hub-westend/Cargo.toml
+++ b/cumulus/parachains/runtimes/assets/asset-hub-westend/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "asset-hub-westend-runtime"
-version = "0.35.0"
+version = "0.37.0"
 authors.workspace = true
 edition.workspace = true
 description = "Westend variant of Asset Hub parachain runtime"
@@ -125,10 +125,10 @@ xcm-runtime-apis.workspace = true
 
 [dev-dependencies]
 alloy-core = { workspace = true, features = ["sol-types"] }
-asset-test-utils = { workspace = true, default-features = true }
-pallet-revive-fixtures = { workspace = true, default-features = true }
-parachains-runtimes-test-utils = { workspace = true, default-features = true }
-sp-tracing = { workspace = true, default-features = true }
+asset-test-utils = { default-features = true, path = "../test-utils" }
+pallet-revive-fixtures = { default-features = true, path = "../../../../../substrate/frame/revive/fixtures" }
+parachains-runtimes-test-utils = { default-features = true, path = "../../test-utils" }
+sp-tracing = { default-features = true, path = "../../../../../substrate/primitives/tracing" }
 
 [build-dependencies]
 substrate-wasm-builder = { optional = true, workspace = true, default-features = true }
@@ -267,7 +267,6 @@ try-runtime = [
 	"sp-runtime/try-runtime",
 ]
 std = [
-	"alloy-core/std",
 	"assets-common/std",
 	"bp-asset-hub-rococo/std",
 	"bp-asset-hub-westend/std",
